2009-10-27  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Added infobar.{h,cc} to the
	project.

	* win32_installer/build-installer: Don't copy /bundle/contrib since
	this does not exist anymore in more recent GTK+ bundles.

	* win32_installer/install-msvc-module:
	* win32_installer/gtkmm-installer.nsi.in: Update for GTK+ 2.18 and
	gtkmm 2.18.

2009-10-18  Daniel Elstner  <daniel.kitta@gmail.com>

	Correct Gtk::TreeModelColumnRecord documentation

	* gtk/gtkmm/treemodelcolumn.h (Gtk::TreeModelColumnRecord): Remove
	bogus sentence vaguely cautioning against the use of static variables
	to implement singletons.  Reword the preceding sentence to avoid this
	sort of misunderstanding.

2009-10-13  David King  <davidk@openismus.com>

	* gtk/src/dialog.hg: Change return type of
	Gtk::Dialog::get_action_area() to Gtk::ButtonBox* from Gtk::HButtonBox*
	to fix breakage on Maemo Fremantle. Fixes bug #597779.
	* tools/m4/convert_gtk.m4: New conversion from GtkWidget* to
	Gtk::ButtonBox*.

2009-10-04  Daniel Elstner  <daniel.kitta@gmail.com>

	Increment version to 2.18.2 and update news

	* configure.ac (AC_INIT): Increment version to 2.18.2.
	(LIBGTKMM_SO_VERSION): Reset revision and increment current and
	age to indicate that API has been added to the library.
	({ATK,GDK,GTK}MM_MODULES): Tighten module version requirements
	to the recent stable releases of every module.
	(MM_PREREQ): Require mm-common 0.8.
	* NEWS: Write news entry for the gtkmm 2.18.2 release.

2009-10-04  Daniel Elstner  <daniel.kitta@gmail.com>

	Resurrect Widget::can_default() and can_focus()

	* gtk/src/widget.{ccg,hg} (Gtk::Widget::can_default): Wrap using
	_WRAP_METHOD(), thereby reintroducing the accidentally removed
	method implementation.
	(can_focus): Use _WRAP_METHOD() to bring back both the declaration
	and the implementation of this accidentally removed method.
	(get_allocation): Properly implement the accessor in terms of