@@ -329,15 +329,26 @@ Section "Development" SecGTKDevelopment
   File ${BINDIR}\gtk-query-immodules-2.0.exe
 
   SetOutPath $INSTDIR\include
-  File /r include\libxml
+  File /r include\libxml2
+  File /r include\freetype2
+  File /r include\fontconfig
+  File /r include\libpng12
   File /r include\glib-2.0
   File /r include\cairo
   File /r include\atk-1.0
   File /r include\pango-1.0
   File /r include\gtk-2.0
   File /r include\libglade-2.0
+  File /r include\gail-1.0
 
+  File include\expat.h
+  File include\expat_external.h
+  File include\ft2build.h
   File include\iconv.h
+  File include\jconfig.h
+  File include\jerror.h
+  File include\jmorecfg.h
+  File include\jpeglib.h
   File include\libcharset.h
   File include\localcharset.h
   File include\libintl.h
@@ -346,9 +357,9 @@ Section "Development" SecGTKDevelopment
   File include\tiff.h
   File include\tiffconf.h
   File include\tiffio.h
-  file include\tiffvers.h
-  file include\zconf.h
-  file include\zlib.h
+  File include\tiffvers.h
+  File include\zconf.h
+  File include\zlib.h
 
   SetOutPath $INSTDIR\lib\gtk-2.0
   File /r lib\gtk-2.0\include
@@ -458,6 +469,7 @@ Section "Development" SecGTKDevelopment
   File lib\pkgconfig\gtk+-2.0.pc
   File lib\pkgconfig\gtk+-win32-2.0.pc
   File lib\pkgconfig\libglade-2.0.pc
+  File lib\pkgconfig\gail.pc
 
   SetOutPath $INSTDIR\share\doc
   File /r share\doc\glib-dev-2.22.2
@@ -1346,14 +1358,25 @@ continue:
   Delete $INSTDIR\bin\gtk-query-immodules-2.0.exe
 
   ; include
-  RMDir /r $INSTDIR\include\libxml
+  RMDir /r $INSTDIR\include\libxml2
+  RMDir /r $INSTDIR\include\freetype2
+  RMDir /r $INSTDIR\include\fontconfig
+  RMDir /r $INSTDIR\include\libpng12
   RMDIR /r $INSTDIR\include\glib-2.0
   RMDIR /r $INSTDIR\include\cairo
   RMDIR /r $INSTDIR\include\atk-1.0
   RMDIR /r $INSTDIR\include\pango-1.0
   RMDIR /r $INSTDIR\include\gtk-2.0
   RMDIR /r $INSTDIR\include\libglade-2.0
+  RMDir /r $INSTDIR\include\gail-1.0
+  Delete $INSTDIR\include\expat.h
+  Delete $INSTDIR\include\expat_external.h
+  Delete $INSTDIR\include\ft2build.h
   Delete $INSTDIR\include\iconv.h
+  Delete $INSTDIR\include\jconfig.h
+  Delete $INSTDIR\include\jerror.h
+  Delete $INSTDIR\include\jmorecfg.h
+  Delete $INSTDIR\include\jpeglib.h
   Delete $INSTDIR\include\libcharset.h
   Delete $INSTDIR\include\localcharset.h
   Delete $INSTDIR\include\libintl.h
@@ -1511,6 +1534,7 @@ continue:
   Delete $INSTDIR\lib\pkgconfig\gtk+-2.0.pc
   Delete $INSTDIR\lib\pkgconfig\gtk+-win32-2.0.pc  
   Delete $INSTDIR\lib\pkgconfig\libglade-2.0.pc  
+  Delete $INSTDIR\lib\pkgconfig\gail.pc
 
   Delete $INSTDIR\lib\pkgconfig\sigc++-*.pc
   Delete $INSTDIR\lib\pkgconfig\cairomm-*.pc
