@@ -1,5 +1,10 @@
 2009-10-27  Armin Burgmeier  <armin@arbur.net>
 
+	* win32_installer/gtkmm-installer.nsi.in: Add a bunch of new include
+	files in the GTK+ bundle to the installer, as well as gail.pc.
+
+2009-10-27  Armin Burgmeier  <armin@arbur.net>
+
 	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
 	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Added infobar.{h,cc} to the
 	project.
